# monero-farm

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENT-REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.ai/: semantic-graph.contract.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  security.yml
ansible/: README.md  site.yml
ansible/group_vars/all/: vault.yml  vault.yml.example
ansible/inventory/: hosts.yml.example
ansible/roles/base/defaults/: main.yml
ansible/roles/base/handlers/: main.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/monero/defaults/: main.yml
ansible/roles/monero/handlers/: main.yml
ansible/roles/monero/tasks/: main.yml
ansible/roles/monero/templates/: monerod.conf.j2  monerod.service.j2
ansible/roles/monitoring/defaults/: main.yml
ansible/roles/monitoring/handlers/: main.yml
config/: monerod.conf  p2pool-flags.conf
config/xmrig/: config.json
docker/systemd/: monerod.service  p2pool.service  xmrig.service
docs/: DISASTER_RECOVERY.md  VAULT_SETUP.md  XMRIG_REACTIVATION.md  architecture.md
memory/: MEMORY.md  architecture.md  debugging.md
plans/: 2026-05-10-monero-farm-hygiene.md
scripts/: README.md  backup.sh  fleet-status.sh  hashrate-summary.sh  health-check.sh  health_check_api.py  promtool_check.sh  restart-all.sh  version-check.sh
scripts/migrate/: hiveos-to-ubuntu.sh  meta-data  user-data
tests/: conftest.py  test_observer_exporter.py  test_scripts.sh  test_unified_exporter.py
(+33 files in other folders)
