[project]
name = "monero-farm"
version = "0.1.0"
description = "Monero mining farm management — monerod + P2Pool + monitoring"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["ansible/roles/monitoring/files"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120
